--- a/style.css
+++ b/style.css
@@ -1,7 +1,40 @@
-img {
+* {
+    margin: 0;
+}
+
+#root > img {
     margin-bottom: 100px;
     max-width: 960px;
     min-height: 480px;
     display: block;
     border: 1px solid;
+}
+
+.github-ribbon {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+a {
+    text-decoration: none;
+    color: slategray;
+}
+
+button {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #111111;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+button:hover {
+    background-color: #555;
 }
